<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="24dp">

    <EditText
        android:id="@+id/edTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/edit_text_name"
        android:inputType="textPersonName"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/edTextDOB"
        app:layout_constraintStart_toStartOf="@+id/edTextDOB"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTextNewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/edit_text_username"
        android:inputType="textPersonName"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/edTextNewPassword"
        app:layout_constraintStart_toStartOf="@+id/edTextDOB"
        app:layout_constraintTop_toBottomOf="@+id/edTextDOB" />

    <EditText
        android:id="@+id/edTextDOB"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="27dp"
        android:hint="@string/edit_dob"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/edTextNewUsername"
        app:layout_constraintEnd_toStartOf="@+id/spinnerGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTextName" />

    <Button
        android:id="@+id/btnStudAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_student_account_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnTeachAccount"
        app:layout_constraintStart_toStartOf="@+id/btnTeachAccount"
        app:layout_constraintTop_toBottomOf="@+id/edTextNewPassword" />

    <EditText
        android:id="@+id/edTextNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/btnStudAccount"
        app:layout_constraintStart_toStartOf="@+id/edTextNewUsername"
        app:layout_constraintTop_toBottomOf="@+id/edTextNewUsername" />

    <Button
        android:id="@+id/btnTeachAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="35dp"
        android:text="@string/request_teacher_account_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textAccMsg"
        app:layout_constraintStart_toStartOf="@+id/textAccMsg"
        app:layout_constraintTop_toBottomOf="@+id/btnStudAccount" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:entries="@array/gender_spinner"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edTextDOB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edTextDOB" />

    <TextView
        android:id="@+id/textAccMsg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:minWidth="300dp"
        android:text="@string/teacher_account_msg"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTeachAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>